--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,12 @@
     --branco: #fff
 }
 
+header{
+    position: relative;
+    padding: 15px 0px 15px 25px;
+
+}
+
 .fundo, .fundo-camada-opacidade{
     position: absolute;
     top: 0;
@@ -26,10 +32,12 @@
 .conteudo-formulario{
     width: 350px;
     height: 450px;
-    background-color: #000;
+    background-color: rgb(0,0,0,0.7);
     color: #fff;
-    position: absolute;
+    position: relative;
+    margin: 0 auto;
     padding: 30px 50px;
+    text-align: center;
 
     /*left 35w; */
 }
@@ -37,6 +45,7 @@
 .conteudo-formulario ,titulo-login{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 32px;
+    
 
 }
 
@@ -44,6 +53,32 @@
 .conteudo-formulario .senha{
     width: 100%;
     height: 45px;
-    border-radius: 7px;
+    background-color: #333;
+    font-size: 16px;
+    color: #fff;
+    border:  none;
+    border-bottom: 2px solid #e87c03;
+    outline: none !important; 
+    border-radius: 5px;
+    margin-bottom: 10px;
+    padding-left: 15px;
 
 }
+
+/*
+Unidade de medidas
+px =>  valor fixo
+% => valor variavel
+width => largura
+height => altura
+background-color => cor de fundo
+color => cor da fonte
+opacity => transparencia
+background image => imagem de fundo
+margin => margen 
+font-family => fonte letra
+font-size => tamanho da letra
+position => posição do elemento 
+padding => distancia entre o elemento e as bordas
+text-align => Posicionar textos
+*/
