--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,13 +1,31 @@
 :root{
-    --vermelho: #e50914
-    --preto: #000
-    --branco: #fff
+    --vermelho: #e50914;
+    --preto: #000;
+    --branco: #fff;
 }
-
+body *{
+    font-family: 'Helvetica Neve', Helvetica,Arial,sans-serif;
+    box-sizing: border-box;
+}
 header{
     position: relative;
     padding: 15px 0px 15px 25px;
 
+}
+button{
+    width: 100%;
+    height: 45px;
+    background-color: var(--vermelho);
+    font-size: 16px;
+    font-weight: 600;
+    margin-top: 30px;
+    border: none;
+    padding-left: 15px;
+    color: var(--branco);
+    outline: none;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    
 }
 
 .fundo, .fundo-camada-opacidade{
@@ -30,20 +48,20 @@ header{
 }
 
 .conteudo-formulario{
-    width: 350px;
+    width: 450px;
     height: 450px;
     background-color: rgb(0,0,0,0.7);
     color: #fff;
     position: relative;
     margin: 0 auto;
-    padding: 30px 50px;
-    text-align: center;
+    padding: 40px 70px;
+    text-align: left;
+    border-radius: 4px;
 
     /*left 35w; */
 }
 
 .conteudo-formulario ,titulo-login{
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 32px;
     
 
@@ -64,6 +82,16 @@ header{
     padding-left: 15px;
 
 }
+
+.aviso-formulario{
+    color: #e87c03;
+    font-size: 12px;
+    margin-top: -5px;
+    margin-bottom: 15px;
+}
+
+
+
 
 /*
 Unidade de medidas
