--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,7 +49,7 @@ button{
 
 .conteudo-formulario{
     width: 450px;
-    height: 450px;
+    min-height: 450px;
     background-color: rgb(0,0,0,0.7);
     color: #fff;
     position: relative;
@@ -67,8 +67,7 @@ button{
 
 }
 
-.conteudo-formulario .email,
-.conteudo-formulario .senha{
+.conteudo-formulario input{
     width: 100%;
     height: 45px;
     background-color: #333;
